fixed result page overflow

--- a/styles/result.css
+++ b/styles/result.css
@@ -11,6 +11,7 @@ body{
     font-family: 'Inter', sans-serif;
     background-image: url('../assets/bg.jpg');
     background-size: cover;
+    overflow: hidden;
 }
 
 .result-container{
